--- a/translations/kangyur/translations/049-001_toh106-unravelling_the_intent.xml
+++ b/translations/kangyur/translations/049-001_toh106-unravelling_the_intent.xml
@@ -28,7 +28,7 @@
                 <sponsor ref="sponsors.xml#sponsor-22">Qiang Li (李强) and Ya Wen (文雅)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.14 <date>2022</date>
+                <edition>v 1.0.15 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -58,7 +58,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-16T16:15:06.864Z" user="admin">16/11/2022 16:15:06</note>
+                <note type="lastUpdated" date-time="2022-12-05T07:47:34.435Z" user="admin">05/12/2022 07:47:34</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:46.047Z" user="mike">2.f</note>
@@ -106,6 +106,7 @@
                 <note type="updated" update="text-version" value="1.0.12" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.13" date-time="2022-06-30T09:00:43.499Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.14" date-time="2022-11-16T16:15:03.902Z" user="konchog">Adjusted long title on title page to match the header above the translation.</note>
+                <note type="updated" update="text-version" value="1.0.15" date-time="2022-12-05T07:47:31.383Z" user="laura">n.181 comment to markup converted to link</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -3071,7 +3072,7 @@
                             compound <foreign xml:lang="Bo-Ltn" type="term">dmigs pa rnam par rig pa tsam</foreign>; *<foreign xml:lang="Sa-Ltn" type="term">ālambanavijñaptimātra</foreign> can be read as a tatpuruṣa: “the mere representation of a referential
                             object,” or as a karmadhāraya: “a referential object that is a mere representation” or “a mere representation as a
                             referential object” (see Schmithausen 2014, p. 411). If we add to these possibilities the distinction between
-                            “characterized as/consists of” and “characterized by” mentioned by Schmithausen in reference to <foreign xml:lang="Sa-Ltn" type="term">prabhāvita</foreign> (see note 322&lt;markup: immediately preceding note&gt;), it is clear that this
+                            “characterized as/consists of” and “characterized by” mentioned by Schmithausen in reference to <foreign xml:lang="Sa-Ltn" type="term">prabhāvita</foreign> (see <ptr target="#UT22084-049-001-494"/><!--previous note-->), it is clear that this
                             important statement can be interpreted in various ways that are consistent with the syntax of this sentence. If one wishes
                             to read the compound *<foreign xml:lang="Sa-Ltn" type="term">ālambanavijñaptimātra</foreign> as a tatpuruṣa, the phrase
                             reads “the mere representation of a referential object.” However, it seems to me that we should read this compound as a
