--- a/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
+++ b/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
@@ -32,7 +32,7 @@
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.6 <date>2022</date>
+                <edition>v 1.1.7 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-08-05T00:08:42.248Z" user="admin">05/08/2022 00:08:42</note>
+                                <note type="lastUpdated" date-time="2022-12-05T09:15:10.669Z" user="admin">05/12/2022 09:15:10</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:05:11.938Z" user="line-tofte">3</note>
@@ -127,6 +127,7 @@
                             <note type="updated" update="text-version" value="1.1.4" date-time="2022-07-21T10:38:16.27Z" user="john">Further small edits suggested by Nate. </note>
                             <note type="updated" update="text-version" value="1.1.5" date-time="2022-07-21T10:45:24.883Z" user="john">'phags pa removed from short title.</note>
                             <note type="updated" update="text-version" value="1.1.6" date-time="2022-08-05T00:08:38.275Z" user="konchog">One change at 1.10: "benefitting" to "benefiting".</note>
+                            <note type="updated" update="text-version" value="1.1.7" date-time="2022-12-05T09:15:07.817Z" user="andre">Glossary matching revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -755,7 +756,7 @@ Notes
                                                 Ryukoku University, 1950.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                                                 <gloss xml:id="UT22084-061-012-75" type="term">
