--- a/translations/kangyur/translations/066-004_toh246-the_sutra_of_the_victory_of_the_ultimate_dharma.xml
+++ b/translations/kangyur/translations/066-004_toh246-the_sutra_of_the_victory_of_the_ultimate_dharma.xml
@@ -8,6 +8,7 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Paramārthadharmavijaya</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">don dam pa’i chos kyis rnam par rgyal ba</title>
                 <title type="mainTitle" xml:lang="bo">དོན་དམ་པའི་ཆོས་ཀྱིས་རྣམ་པར་རྒྱལ་བ།</title>
+                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “Victory of the Ultimate Dharma”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Āryaparamārthadharmavijayanāmamahāyānasūtra</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་དོན་དམ་པའི་ཆོས་ཀྱི་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa don dam pa’i chos kyi rnam par rgyal ba zhes bya ba theg pa chen po’i mdo</title>
@@ -30,7 +31,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.3 <date>2021</date>
+                <edition>v 1.1.4 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -64,7 +65,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:04:51.714Z" user="admin">26/07/2022 07:04:51</note>
+                <note type="lastUpdated" date-time="2022-12-05T10:18:29.82Z" user="admin">05/12/2022 10:18:29</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-01-27T13:16:32.364Z" user="mike">2.e</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-03-24T14:32:27.542Z" user="line-tofte">2.f</note>
@@ -100,6 +101,7 @@
                 <note type="updated" update="text-version" value="1.1.1" date-time="2021-11-24T18:28:30.481Z" user="celso">Corrections to Skt. from Wiesiek</note>
                 <note type="updated" update="text-version" value="1.1.2" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.1.3" date-time="2022-07-26T07:04:44.024Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.1.4" date-time="2022-12-05T10:18:24.06Z" user="john">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
