--- a/translations/kangyur/translations/088-022_toh528,858-the_dharani_of_agrapradipa.xml
+++ b/translations/kangyur/translations/088-022_toh528,858-the_dharani_of_agrapradipa.xml
@@ -30,10 +30,10 @@
                                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -81,7 +81,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-11-29T14:29:15.049Z" user="admin">29/11/2022 14:29:15</note>
+                                <note type="lastUpdated" date-time="2022-12-05T14:08:54.716Z" user="admin">05/12/2022 14:08:54</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2022-01-31T10:53:56.195Z" user="line-tofte">3</note>
@@ -131,6 +131,8 @@
                             <note type="updated" update="text-version" value="1.0.1" date-time="2022-11-22T19:13:28.165Z" user="martina-cotter">Auto (update-publication-status)</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2022-11-28T11:55:04.276Z" user="andre">Glossary matching revised - Activated in CG</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2022-11-29T14:29:12.257Z" user="martina-cotter">Editorial updates.</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2022-12-05T14:08:49.118Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2022-12-05T14:08:49.118Z" user="sameer">Included in App v2.7</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
