--- a/translations/kangyur/translations/044-014_toh93-the_sutra_of_the_rsi_vyasas_questions.xml
+++ b/translations/kangyur/translations/044-014_toh93-the_sutra_of_the_rsi_vyasas_questions.xml
@@ -140,10 +140,10 @@
 
 
                         <editionStmt>
-                <edition>v 1.1.1 <date>2022</date>
+                <edition>v 1.1.2 <date>2022</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -382,7 +382,7 @@
 
 
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-10T18:34:14.981Z" user="john">Harmonization of trailer and colophon</note>
-                        <note type="lastUpdated" date-time="2022-12-05T11:42:35.726Z" user="admin">05/12/2022 11:42:35</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-18T07:35:44.08Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="1.a" date-time="2022-10-14T13:30:11.104Z" user="martina-cotter">1.a</note>    <note type="updated" update="text-version" value="1.0.0" date-time="2022-10-14T13:30:11.104Z" user="martina-cotter">First published version</note>    <note type="updated" update="text-version" value="1.0.1" date-time="2022-11-07T16:32:59.608Z" user="andre">Glossary matching revised - CG status active</note>    <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-04T03:16:40.892Z" user="konchog">Numerous fixes in the translation, notes, and glossary. Documented in an email.</note>    <note type="updated" update="text-version" value="1.1.1" date-time="2022-12-05T11:42:32.89Z" user="john">Expanded i.2 in the introduction, added line break spaces to separate topics throughout, revised certain sentences here and there.</note>
+                        <note type="lastUpdated" date-time="2022-12-05T14:20:56.528Z" user="admin">05/12/2022 14:20:56</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-18T07:35:44.08Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="1.a" date-time="2022-10-14T13:30:11.104Z" user="martina-cotter">1.a</note>    <note type="updated" update="text-version" value="1.0.0" date-time="2022-10-14T13:30:11.104Z" user="martina-cotter">First published version</note>    <note type="updated" update="text-version" value="1.0.1" date-time="2022-11-07T16:32:59.608Z" user="andre">Glossary matching revised - CG status active</note>    <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-04T03:16:40.892Z" user="konchog">Numerous fixes in the translation, notes, and glossary. Documented in an email.</note>    <note type="updated" update="text-version" value="1.1.1" date-time="2022-12-05T11:42:32.89Z" user="john">Expanded i.2 in the introduction, added line break spaces to separate topics throughout, revised certain sentences here and there.</note>    <note type="updated" update="translation-status" value="1" date-time="2022-12-05T14:20:50.857Z" user="sameer">1</note>    <note type="updated" update="text-version" value="1.1.2" date-time="2022-12-05T14:20:50.857Z" user="sameer">Included in App v2.5</note>
             </notesStmt>
                 </fileDesc>
         </teiHeader>
