--- a/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
+++ b/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
@@ -33,10 +33,10 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -67,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-11-28T23:41:30.439Z" user="admin">28/11/2022 23:41:30</note>
+        <note type="lastUpdated" date-time="2022-12-05T14:30:19.843Z" user="admin">05/12/2022 14:30:19</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</note>
@@ -106,6 +106,8 @@
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-10-26T20:07:13.788Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-11-04T14:30:01.633Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
           <note type="updated" update="text-version" value="1.0.3" date-time="2022-11-28T23:41:27.665Z" user="konchog">Various fixes throughout the sections, documented in email exchange.</note>
+          <note type="updated" update="translation-status" value="1" date-time="2022-12-05T14:30:14.195Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.0.4" date-time="2022-12-05T14:30:14.195Z" user="sameer">Included in App v2.5</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
