--- a/translations/kangyur/translations/064-002_toh232-the_great_cloud.xml
+++ b/translations/kangyur/translations/064-002_toh232-the_great_cloud.xml
@@ -26,7 +26,7 @@
         <sponsor ref="sponsors.xml#sponsor-3">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.5 <date>2022</date>
+                <edition>v 1.1.6 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -62,7 +62,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-12-05T13:57:25.202Z" user="admin">05/12/2022 13:57:25</note>
+        <note type="lastUpdated" date-time="2022-12-05T14:48:25.497Z" user="admin">05/12/2022 14:48:25</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">Auto
@@ -105,6 +105,7 @@
           <note type="updated" update="text-version" value="1.1.4" date-time="2022-11-22T17:00:49.401Z" user="andre">Glossary revised and activated in CG</note>
           <note type="updated" update="translation-status" value="1" date-time="2022-12-05T13:57:19.173Z" user="sameer">1</note>
           <note type="updated" update="text-version" value="1.1.5" date-time="2022-12-05T13:57:19.173Z" user="sameer">Included in App v2.7</note>
+          <note type="updated" update="text-version" value="1.1.6" date-time="2022-12-05T14:48:22.425Z" user="konchog">Many small fixes throughout all sections, documented in an email. Another version increses will come once several other higher editorial questions are resolved.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
