--- a/translations/kangyur/translations/081-007_toh438-the_praise_of_tara_in_twentyone_homages.xml
+++ b/translations/kangyur/translations/081-007_toh438-the_praise_of_tara_in_twentyone_homages.xml
@@ -26,7 +26,7 @@
                 <consultant role="advisor" ref="contributors.xml#person-76">Wiesiek Mical</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.17 <date>2022</date>
+                <edition>v 1.2.18 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -59,7 +59,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-04T14:23:58.476Z" user="admin">04/11/2022 14:23:58</note>
+                <note type="lastUpdated" date-time="2022-12-06T17:37:42.871Z" user="admin">06/12/2022 17:37:42</note>
 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-03-06T09:58:21.069Z" user="line-tofte">2.g</note>
@@ -86,7 +86,7 @@
     <note type="updated" update="text-version" value="1.2.10" date-time="2021-04-22T19:44:02.356Z" user="celso">minor correction to markup, new files not needed</note>
     <note type="updated" update="text-version" value="1.2.11" date-time="2021-06-26T03:56:47.483Z" user="celso">kiṃnara to kinnara</note>
     <note type="updated" update="text-version" value="1.2.12" date-time="2021-07-31T05:36:14.864Z" user="mike">seven changed to seventy</note>
-    <note type="updated" update="text-version" value="1.2.13" date-time="2021-08-13T20:50:05.391Z" user="celso">fixed minor typo in glossary</note>    <note type="updated" update="text-version" value="1.2.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.15" date-time="2022-10-25T19:02:15.018Z" user="martina-cotter">Added pending links.</note>    <note type="updated" update="text-version" value="1.2.16" date-time="2022-10-26T20:00:16.698Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.17" date-time="2022-11-04T14:23:55.657Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
+    <note type="updated" update="text-version" value="1.2.13" date-time="2021-08-13T20:50:05.391Z" user="celso">fixed minor typo in glossary</note>    <note type="updated" update="text-version" value="1.2.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.15" date-time="2022-10-25T19:02:15.018Z" user="martina-cotter">Added pending links.</note>    <note type="updated" update="text-version" value="1.2.16" date-time="2022-10-26T20:00:16.698Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.17" date-time="2022-11-04T14:23:55.657Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.18" date-time="2022-12-06T17:37:40.054Z" user="martina-cotter">Updated bib entry.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -479,8 +479,7 @@
                             <title xml:lang="Bo-Ltn">sgrol ma la phyag ’tshal nyi shu rtsa gcig gis bstod pa phan yon dang bcas pa </title>(<title xml:lang="Sa-Ltn">*Tārā­namaskāraikaviṃśatistotra­guṇahitasahita</title>). Stok Palace Kangyur vol. 95 (rgyud, nga), folios
                             435.a–437.a.</bibl>
                         <bibl xml:id="UT22084-081-007-67">
-                            <title xml:lang="Bo-Ltn">sgrol ma las sna tshogs ’byung ba’i rgyud</title> (<title xml:lang="Sa-Ltn">*<ref target="https://read.84000.co/translation/toh726.html">Tārā­viśva­karma­bhava­tantra</ref>
-                            </title>). Toh 726, Degé Kangyur vol. 94 (rgyud, tsha), folios 202.a–217.a. </bibl>
+                            <title xml:lang="Bo-Ltn">sgrol ma las sna tshogs ’byung ba’i rgyud</title> (<title xml:lang="Sa-Ltn">*Tārā­viśva­karma­bhava­tantra</title>). Toh 726, Degé Kangyur vol. 94 (rgyud, tsha), folios 202.a–217.a. </bibl>
                     </div>
                     <div type="section" xml:id="UT22084-081-007-listBibl-1-3">
                         <head type="section" tid="48">Tengyur</head>
