--- a/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
+++ b/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
@@ -33,7 +33,7 @@
         <sponsor ref="sponsors.xml#sponsor-121">Manju Sun and Jamyang Sun</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-21T08:39:57.787Z" user="admin">21/09/2022 08:39:57</note>
+        <note type="lastUpdated" date-time="2022-12-06T19:00:19.014Z" user="admin">06/12/2022 19:00:19</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T15:04:03.28Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-10T09:50:51.422Z" user="line-tofte">Auto (update-contributors)</note>
@@ -118,6 +118,7 @@
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-08-12T08:31:30.386Z" user="sameer">First published version</note>
           <note type="updated" update="translation-status" value="1" date-time="2022-09-21T08:39:49.554Z" user="sameer">1</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-21T08:39:49.554Z" user="sameer">Included in App v2.3</note>
+          <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-06T19:00:16.063Z" user="martina-cotter">Added pending links.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -191,9 +192,9 @@
                                 <ref target="https://read.84000.co/translation/toh127.html">The King of Samādhis
                   Sūtra</ref>
                             </title>, Toh 127 (84000: Translating the Words of the Buddha,
-              2018).</note> and the <title xml:lang="Sa-Ltn">
-                            <ref rend="pending" target="http://read.84000.co/translation/toh232.html">Mahāmeghasūtra</ref>
-                        </title>.
+              2018).</note> and the <title xml:lang="Sa-Ltn">Mahāmeghasūtra</title>.<note place="end" xml:id="UT22084-061-006-292">See Mahamegha Translation Team, trans. <title xml:lang="en">
+                <ref target="https://read.84000.co/translation/toh232.html">The Great Cloud (1)</ref>
+              </title>, Toh 232.</note>
             The Tibetan translation was completed in the early translation period and is listed in
             the early ninth-century Denkarma (<foreign xml:lang="Bo-Ltn">ldan dkar ma</foreign>)
               catalog.<note place="end" xml:id="UT22084-066-015-10"> Denkarma, folio 297.b; note
@@ -7955,8 +7956,8 @@
               po</title> (<title xml:lang="Sa-Ltn">Samādhirāja</title>). Toh 127, Degé Kangyur vol.
             55 (mdo sde, da), folios 1.b–170.b. English translation in Roberts 2018.</bibl>
           <bibl xml:id="UT22084-066-015-1205">
-                        <title xml:lang="Bo-Ltn">sprin chen po</title> (<title xml:lang="Sa-Ltn">Mahāmegha</title>). <ref rend="pending" target="http://read.84000.co/translation/toh232.html">Toh 232</ref>, Degé Kangyur vol.
-            64 (mdo sde, wa), folios 113.a–214.b.</bibl>
+                        <title xml:lang="Bo-Ltn">sprin chen po</title> (<title xml:lang="Sa-Ltn">Mahāmegha</title>). Toh 232, Degé Kangyur vol.
+            64 (mdo sde, wa), folios 113.a–214.b. English translation in Mahamegha Translation Team 2022.</bibl>
           <bibl xml:id="UT22084-066-015-1206">
                         <title xml:lang="Bo-Ltn">blo gros mi zad pas bstan
               pa</title> (<title xml:lang="Sa-Ltn">Akṣayamati­nirdeśa</title>). Toh 175, Degé
@@ -8017,6 +8018,11 @@
           <bibl xml:id="UT22084-066-015-1220">———(1905). “Notes chinoises sur l’Inde: V. Quelques
             documents sur le bouddhisme indien dans l’Asie centrale (première partie).” <title xml:lang="fr">Bulletin de l’Ecole française d’Extrême-Orient</title> 5 (1905):
             253–305. </bibl>
+          <bibl xml:id="UT22084-066-015-1604">Mahamegha Translation Team (2022), trans. <title xml:lang="en">
+            <ref target="https://read.84000.co/translation/toh232.html">The Great Cloud (1)</ref>
+                        </title>
+            (<title xml:lang="Sa-Ltn">Mahāmegha</title>, Toh 232). 84000: Translating the Words of the Buddha,
+            2018.</bibl>
           <bibl xml:id="UT22084-066-015-1221">Mak, Bill M. “Indian <foreign xml:lang="Sa-Ltn" type="term">Jyotiṣa</foreign> through the Lens of Chinese Buddhist Canon.” <title xml:lang="en">Journal of Oriental Studies</title> 48, no. 1 (June 2015): 1–19. </bibl>
           <bibl xml:id="UT22084-066-015-1222">Martin, Dan. <title xml:lang="en">Unearthing Bon
               Treasures: Life and Contested Legacy of a Tibetan Scripture Revealer, with a General
@@ -8558,13 +8564,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-066-015-1275">
-              <term>level of the family</term>
-              <term xml:lang="Bo-Ltn">rigs kyi sa </term>
-              <term xml:lang="bo">རིགས་ཀྱི་ས།</term>
-              <term xml:lang="Sa-Ltn">gotrabhūmi</term>
-              <term type="definition">First level of realization on the path of the hearers.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-066-015-1275" type="term" mode="match">
+                            <term>level of the family</term>
+                            <term xml:lang="Bo-Ltn">rigs kyi sa</term>
+                            <term xml:lang="bo">རིགས་ཀྱི་ས།</term>
+                            <term xml:lang="Sa-Ltn">gotrabhūmi</term>
+                            <term type="definition">One of the initial levels of realization on the path of the hearers. Depending on classification system it is either the first or the second level (when it is preceded by the Śuklavipaśyanā level).</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-066-015-1276">
