--- a/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
+++ b/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
@@ -33,7 +33,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.4 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -67,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-12-05T14:30:19.843Z" user="admin">05/12/2022 14:30:19</note>
+        <note type="lastUpdated" date-time="2022-12-06T19:03:51.585Z" user="admin">06/12/2022 19:03:51</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</note>
@@ -108,6 +108,7 @@
           <note type="updated" update="text-version" value="1.0.3" date-time="2022-11-28T23:41:27.665Z" user="konchog">Various fixes throughout the sections, documented in email exchange.</note>
           <note type="updated" update="translation-status" value="1" date-time="2022-12-05T14:30:14.195Z" user="sameer">1</note>
           <note type="updated" update="text-version" value="1.0.4" date-time="2022-12-05T14:30:14.195Z" user="sameer">Included in App v2.5</note>
+          <note type="updated" update="text-version" value="1.0.5" date-time="2022-12-06T19:03:48.794Z" user="celso">moved title in tr. from "titleHon" to "titleMain"</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -183,8 +184,7 @@
     <body>
       <div type="translation">
         <head type="translation" tid="13"> The Translation </head>
-        <head type="titleHon" tid="14">The Hundred and Eight Names of the Goddess Tārā</head>
-        <head type="titleMain" tid="15"/>
+        <head type="titleMain" tid="15">The Hundred and Eight Names of the Goddess Tārā</head>
         <div type="section" xml:id="UT22084-094-005-section-1">
           <milestone unit="chunk" xml:id="UT22084-094-005-11"/>
           <p tid="18">
