--- a/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
+++ b/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
@@ -33,7 +33,7 @@
         <sponsor ref="sponsors.xml#sponsor-121">Manju Sun and Jamyang Sun</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-12-06T19:00:19.014Z" user="admin">06/12/2022 19:00:19</note>
+        <note type="lastUpdated" date-time="2022-12-06T19:13:18.091Z" user="admin">06/12/2022 19:13:18</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T15:04:03.28Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-10T09:50:51.422Z" user="line-tofte">Auto (update-contributors)</note>
@@ -119,6 +119,7 @@
           <note type="updated" update="translation-status" value="1" date-time="2022-09-21T08:39:49.554Z" user="sameer">1</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-21T08:39:49.554Z" user="sameer">Included in App v2.3</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-06T19:00:16.063Z" user="martina-cotter">Added pending links.</note>
+          <note type="updated" update="text-version" value="1.0.3" date-time="2022-12-06T19:13:15.136Z" user="martina-cotter">Added pending links.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -7942,7 +7943,7 @@
                         <title xml:lang="Bo-Ltn">glang ru lung bstan
               pa</title> (<title xml:lang="Sa-Ltn">Gośṛṅgavyākaraṇa</title>). Toh 357, Degé Kangyur
             vol. 76 (mdo sde, aH), folios 220.b–232.a. English translation in Dharmachakra
-            Translation Committee 2021.</bibl>
+            Translation Committee 2021. [Full citation listed in secondary sources]</bibl>
           <bibl xml:id="UT22084-066-015-1202">
                         <title xml:lang="Bo-Ltn">zla ba’i snying po</title>
               (<title xml:lang="Sa-Ltn">Candragarbha</title>). Toh 356, Degé Kangyur vol. 76 (mdo
@@ -7954,15 +7955,15 @@
           <bibl xml:id="UT22084-066-015-1204">
                         <title xml:lang="Bo-Ltn">ting nge ’dzin gyi rgyal
               po</title> (<title xml:lang="Sa-Ltn">Samādhirāja</title>). Toh 127, Degé Kangyur vol.
-            55 (mdo sde, da), folios 1.b–170.b. English translation in Roberts 2018.</bibl>
+            55 (mdo sde, da), folios 1.b–170.b. English translation in Roberts 2018. [Full citation listed in secondary sources]</bibl>
           <bibl xml:id="UT22084-066-015-1205">
                         <title xml:lang="Bo-Ltn">sprin chen po</title> (<title xml:lang="Sa-Ltn">Mahāmegha</title>). Toh 232, Degé Kangyur vol.
-            64 (mdo sde, wa), folios 113.a–214.b. English translation in Mahamegha Translation Team 2022.</bibl>
+            64 (mdo sde, wa), folios 113.a–214.b. English translation in Mahamegha Translation Team 2022. [Full citation listed in secondary sources]</bibl>
           <bibl xml:id="UT22084-066-015-1206">
                         <title xml:lang="Bo-Ltn">blo gros mi zad pas bstan
               pa</title> (<title xml:lang="Sa-Ltn">Akṣayamati­nirdeśa</title>). Toh 175, Degé
             Kangyur vol. 60 (mdo sde, ma), folios 79.a–174.b. English translation in Braarvig and
-            Welsh 2020.</bibl>
+            Welsh 2020. [Full citation listed in secondary sources]</bibl>
           <bibl xml:id="UT22084-066-015-1207">Nāgārjuna. <title xml:lang="Bo-Ltn">mdo kun las btus
               pa</title> (<title xml:lang="Sa-Ltn">Sūtrasamuccaya</title>). <ref rend="pending" target="http://read.84000.co/translation/toh3934.html">Toh 3934</ref>, Degé Tengyur
             vol. 110 (dbu ma, ki), folios 148.b–215.a. See also Bhikkhu Pāsādika 1989.</bibl>
