--- a/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
+++ b/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
@@ -31,7 +31,7 @@
                 <sponsor ref="sponsors.xml#sponsor-190">Irene Tillman</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.35.9 <date>2022</date>
+                <edition>v 1.35.11 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -66,7 +66,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T15:57:50.042Z" user="admin">10/06/2022 15:57:50</note>
+                <note type="lastUpdated" date-time="2022-12-08T00:19:54.942Z" user="admin">08/12/2022 00:19:54</note>
                 <note type="updated" update="text-version" value="v 1.14" date-time="2019-06-18T02:25:27.313Z" user="celso">v 1.14 2019</note>
                 <note type="updated" update="text-version" value="v 1.15" date-time="2019-06-21T14:11:40.294Z" user="celso">v 1.15 2019</note>
                 <note type="updated" update="text-version" value="v 1.17" date-time="2019-07-31T19:46:14.742Z" user="celso">v 1.17 2019</note>
@@ -133,6 +133,8 @@
                 <note type="updated" update="text-version" value="1.35.6" date-time="2021-08-05T03:19:17.798Z" user="celso">kiṃnara to kinnara</note>
                 <note type="updated" update="text-version" value="1.35.7" date-time="2021-09-23T09:34:52.85Z" user="mike">empty tei tag in glossary fixed</note>
                 <note type="updated" update="text-version" value="1.35.8" date-time="2022-02-16T15:57:59.412Z" user="celso">Added new locations to glossary cache according to new hyphen rules</note>
+                <note type="updated" update="text-version" value="1.35.10" date-time="2022-06-27T09:59:07.153Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.35.11" date-time="2022-12-08T00:19:51.726Z" user="konchog">A couple minor fixes.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -221,7 +223,7 @@
                             incomplete <title xml:lang="Bo-Ltn">
                                 <ref target="https://read.84000.co/translation/toh7.html" rend="pending">’dul ba
                                     gzhung bla ma</ref>
-                            </title> (Toh 7) and the complete<title xml:lang="Bo-Ltn">
+                            </title> (Toh 7) and the complete <title xml:lang="Bo-Ltn">
                                 <ref rend="pending" target="https://read.84000.co/translation/toh7a.html">’dul ba gzhung dam pa</ref>
                             </title> (Toh
                             7a). For more on the <title xml:lang="Sa-Ltn">Uttaragrantha </title>(<title xml:lang="Bo-Ltn">’dul ba gzhung dam
@@ -2148,8 +2150,8 @@
                             actions, two types of actions, action, half-actions, sixty-two paths, sixty-two intermediate eons, thirty-six hells, one
                             hundred and twenty senses, sixty-two constituent particles, 49,000 classes of nāga families, 49,000 classes of garuḍa,
                             49,000 classes of wandering mendicants, <ref cRef="F.26.b" type="folio" xml:id="UT22084-001-001-29091"/> 49,000 classes of
-                            Ājivika, 49,000 classes of Nirgrantha, seven realms with discerning awareness, seven realms lacking discerning awareness,
-                            seven Nirgrantha realms, seven demi-god realms, seven demonic realms, seven godly realms, seven human realms, seven great
+                            ājivika, 49,000 classes of nirgrantha, seven realms with discerning awareness, seven realms lacking discerning awareness,
+                            seven nirgrantha realms, seven demi-god realms, seven demonic realms, seven godly realms, seven human realms, seven great
                             oceans, seven hundred lakes, seven great dreams, seven hundred dreams, seven states of great diminishment, seven hundred
                             states of diminishment, seven states of great increase, seven hundred states of increase, seven states of great depletion,
                             seven hundred states of depletion, seven great abysses, seven hundred abysses, six noble clans, ten high-status rebirths,
@@ -2202,7 +2204,7 @@
                         <milestone unit="chunk" xml:id="UT22084-001-001-485"/>
                         <p tid="412">Kakuda Kātyāyana’s teaching heard, they cast it aside like an empty bottle and moved on. </p>
                         <lb/>
-                        <p tid="413">Upatiṣya and Kolita then went to Jñātiputra the Nirgrantha and asked, “Sir<!--shes ldan-->, what is your approach
+                        <p tid="413">Upatiṣya and Kolita then went to Jñātiputra, the Nirgrantha, and asked, “Sir<!--shes ldan-->, what is your approach
                             to the Dharma? What instructions do you give to your students? What is the result of living the holy life? What are its
                             benefits?”</p>
                         <milestone unit="chunk" xml:id="UT22084-001-001-487"/>
@@ -11275,9 +11277,9 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-001-001-2582">
-                            <term>the practice of squatting</term>
-                            <term xml:lang="Bo-Ltn">tsog pu’i spong ba </term>
+                        <gloss xml:id="UT22084-001-001-2582" type="term" mode="match">
+                            <term>practice of squatting</term>
+                            <term xml:lang="Bo-Ltn">tsog pu’i spong ba</term>
                             <term xml:lang="bo">ཙོག་པུའི་སྤོང་བ།</term>
                             <term xml:lang="Sa-Ltn">utkuṭukaprahāṇa</term>
                             <term type="definition">A form of asceticism practiced especially by Ājīvikas.</term>
@@ -11612,12 +11614,13 @@
                             </gloss>
                         </item>-->
                     <item>
-                        <gloss type="term" xml:id="UT22084-001-001-2618">
+                        <gloss xml:id="UT22084-001-001-2618" type="term" mode="match">
                             <term>forgiveness</term>
-                            <term xml:lang="Bo-Ltn">bzod pa </term>
+                            <term xml:lang="Bo-Ltn">bzod pa</term>
                             <term xml:lang="bo">བཟོད་པ།</term>
                             <term xml:lang="Sa-Ltn"/>
                             <term type="alternative">forgiven</term>
+                            <term type="definition">—</term>
                         </gloss>
                     </item>
                     <item>
