--- a/translations/kangyur/translations/047-002_toh100_ornament_of_the_light_of_awareness.xml
+++ b/translations/kangyur/translations/047-002_toh100_ornament_of_the_light_of_awareness.xml
@@ -27,7 +27,7 @@
                 
             </titleStmt>
             <editionStmt>
-                <edition>v 1.43.15 <date>2022</date>
+                <edition>v 1.43.16 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -60,7 +60,7 @@
             
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-16T16:12:53.091Z" user="admin">16/11/2022 16:12:53</note>
+                <note type="lastUpdated" date-time="2022-12-08T00:22:19.917Z" user="admin">08/12/2022 00:22:19</note>
             <note type="updated" update="text-version" value="v 1.41" date-time="2019-06-18T02:49:40.902Z" user="celso">v 1.41 2019</note>
                 <note type="updated" update="text-version" value="v 1.42" date-time="2019-06-18T15:41:20.036Z" user="celso">v 1.42 2019</note>
                 <note type="updated" update="text-version" value="v 1.43" date-time="2019-06-21T14:25:16.267Z" user="celso">v 1.43 2019</note>
@@ -79,6 +79,7 @@
     <note type="updated" update="text-version" value="1.43.13" date-time="2022-01-04T21:50:27.077Z" user="celso">apsaras to apsarases</note>
     <note type="updated" update="text-version" value="1.43.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.43.15" date-time="2022-11-16T16:12:50.245Z" user="konchog">Small fix to title throughout (capitalized "that").</note>
+    <note type="updated" update="text-version" value="1.43.16" date-time="2022-12-08T00:22:16.971Z" user="konchog">Minor fixes rendering names of non-Buddhist ascetics lower case.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1038,7 +1039,7 @@ Notes-->
                     <p tid="129">“In the same way, Mañjuśrī, it is through having the Tathāgata as their basis and support that
                         all the roots of what is wholesome of all sentient beings grow and become sizeable. <ref cRef="F.288.b" type="folio" xml:id="UT22084-047-002-415"/>
                         Whether it is the roots of what is wholesome of those on the Vehicle of the Hearers, on the Pratyekabuddha
-                        Vehicle, or on the Great Vehicle; or of all tīrthikas such as the Carakas, Parivrājakas, and Nirgranthas,
+                        Vehicle, or on the Great Vehicle; or of all tīrthikas such as the carakas, parivrājakas, and nirgranthas,
                         and so forth; or of any others, down to the roots of what is wholesome of those stuck in what is wrong; it
                         is through having the Tathāgata as their basis and support that they grow and become sizeable. </p>
                     <milestone unit="chunk" xml:id="UT22084-047-002-80"/>
