--- a/translations/kangyur/translations/061-001_toh181-teaching_the_five_perfections.xml
+++ b/translations/kangyur/translations/061-001_toh181-teaching_the_five_perfections.xml
@@ -32,7 +32,7 @@
                 <sponsor ref="sponsors.xml#sponsor-30">Liu Fan and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.6 <date>2022</date>
+                <edition>v 1.1.7 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -65,7 +65,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:25:27.216Z" user="admin">26/07/2022 06:25:27</note>
+                <note type="lastUpdated" date-time="2022-12-08T00:23:45.811Z" user="admin">08/12/2022 00:23:45</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:15:57.936Z" user="mike">2.d</note>
@@ -115,6 +115,7 @@
                 <note type="updated" update="text-version" value="1.1.4" date-time="2022-03-02T19:11:46.383Z" user="celso">test if version update fixes uncached note</note>
                 <note type="updated" update="text-version" value="1.1.5" date-time="2022-03-02T19:19:15.314Z" user="celso">removed one glossary link</note>
                 <note type="updated" update="text-version" value="1.1.6" date-time="2022-07-26T06:25:19.405Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.1.7" date-time="2022-12-08T00:23:42.863Z" user="konchog">Minor fixes rendering names of non-Buddhist ascetics lower case.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1779,8 +1780,8 @@
                         <milestone unit="chunk" xml:id="UT22084-061-001-276"/>
                         <p tid="289">“Venerable Pūrṇa, as an analogy, when the sun rises in the sky, it outshines the light of every fireflies.
                             Venerable Pūrṇa, in the same way, when the discipline of the bodhisattvas is dedicated toward omniscience, it outshines
-                            the light of discipline that shines from all the non-Buddhists, such as the Mīmāṃsakas, the Parivrājakas, and the
-                            Nirgranthas, as well as the noble hearers and the solitary buddhas. Venerable Pūrṇa, as a further analogy, when the moon
+                            the light of discipline that shines from all the non-Buddhists, such as the mīmāṃsakas, the parivrājakas, and the
+                            nirgranthas, as well as the noble hearers and the solitary buddhas. Venerable Pūrṇa, as a further analogy, when the moon
                             rises, it eclipses the light of all the stars in the sky. Venerable Pūrṇa, likewise, when the discipline of the
                             bodhisattvas is dedicated toward omniscience, it outshines the discipline of all the hearers and solitary buddhas.
                             Venerable Pūrṇa, it is when bodhisattva great beings bring to mind the Thus-Gone One and engender the unique state of mind
