--- a/translations/kangyur/translations/060-005_toh176_teaching_of_vimalakirti.xml
+++ b/translations/kangyur/translations/060-005_toh176_teaching_of_vimalakirti.xml
@@ -20,7 +20,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.45.14 <date>2022</date>
+                <edition>v 1.45.16 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -52,7 +52,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-16T14:59:00.122Z" user="admin">16/05/2022 14:59:00</note>
+                <note type="lastUpdated" date-time="2022-12-08T00:25:15.766Z" user="admin">08/12/2022 00:25:15</note>
                 <note type="updated" update="text-version" value="v 1.36" date-time="2019-05-04T14:01:18.651Z" user="john">v 1.36 2017</note>
                 <note type="updated" update="text-version" value="v 1.38" date-time="2019-06-18T16:14:55.895Z" user="celso">v 1.38 2019</note>
                 <note type="updated" update="text-version" value="v 1.39" date-time="2019-07-02T17:59:15.102Z" user="john">v 1.39 2019</note>
@@ -85,6 +85,8 @@
     <note type="updated" update="text-version" value="1.45.12" date-time="2022-01-04T21:47:48.254Z" user="celso">karma to karman in Skt. field glossary</note>
     <note type="updated" update="text-version" value="1.45.13" date-time="2022-03-11T19:45:52.835Z" user="celso">adjusted cache in glossary linking according to new hyphen rules</note>
     <note type="updated" update="text-version" value="1.45.14" date-time="2022-05-16T14:58:56.215Z" user="martina-cotter">Updated definition of g.308</note>
+    <note type="updated" update="text-version" value="1.45.15" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+    <note type="updated" update="text-version" value="1.45.16" date-time="2022-12-08T00:25:12.743Z" user="konchog">One fix in note 90.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1374,7 +1376,7 @@
                     <p tid="171">“ ‘Reverend Ānanda, do not bring shame upon us, but go in silence, lest the outsider sectarians<note place="end" xml:id="UT22084-060-005-952"> Tib. <foreign xml:lang="Bo-Ltn" type="quote">gzhan mu stegs can spyod pa pa dang kun tu rgyu
                                 dang gcer bu pa dang tsho ba pa dag</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="quote">anyatīrthika caraka
                                 parivrajaka nigranthājīvāḥ</foreign>. I have simply rendered this “outsider sectarians” so as not to burden the reader
-                            with irrelevant names, as this expression is a cliche for all the outsider groups occurring in other Mahāyāna sūtras (see
+                        with irrelevant names, as this expression is a cliché for all the outsider groups occurring in other Mahāyāna sūtras (see
                             Lamotte, p 186, n 81).</note> should hear your words. They would say, “For shame! The teacher of these people cannot even
                         cure his own sicknesses. How then can he cure the sicknesses of others?” Reverend Ānanda, go then discreetly so that no one
                         observes you.</p>
@@ -4234,11 +4236,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-060-005-505">
+                        <gloss xml:id="UT22084-060-005-505" type="term" mode="match">
                             <term>noble</term>
-                            <term xml:lang="Bo-Ltn">’phags pa </term>
+                            <term xml:lang="Bo-Ltn">’phags pa</term>
                             <term xml:lang="bo">འཕགས་པ།</term>
                             <term xml:lang="Sa-Ltn">ārya</term>
+                            <term type="definition">—</term>
                         </gloss>
                     </item>
                     <item>
@@ -6166,7 +6169,7 @@
                             <term>ten sins</term>
                             <term xml:lang="Bo-Ltn">mi dge ba bcu</term>
                             <term xml:lang="bo">མི་དགེ་བ་བཅུ།</term>
-                            <term xml:lang="Sa-Ltn">akuśala</term>
+                            <term xml:lang="Sa-Ltn">daśākuśala</term>
                             <term type="definition">These are the opposite of the ten virtues, and consist of killing, stealing, sexual misconduct, lying, harsh speech, backbiting, frivolous speech, covetousness, malice, and false views.</term>
                         </gloss>
                     </item>
