--- a/translations/kangyur/translations/073-001_toh340-the_hundred_deeds.xml
+++ b/translations/kangyur/translations/073-001_toh340-the_hundred_deeds.xml
@@ -30,7 +30,7 @@
                 <sponsor ref="sponsors.xml#sponsor-25">Ye Kong, Helen Ying Han and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.25 <date>2022</date>
+                <edition>v 1.3.26 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -65,7 +65,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T16:03:05.679Z" user="admin">29/06/2022 16:03:05</note>
+                <note type="lastUpdated" date-time="2022-12-08T00:26:48.15Z" user="admin">08/12/2022 00:26:48</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2019-06-29T22:29:07.138Z" user="konchog">2.b</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2019-07-17T09:48:24.029Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="v 1.0.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
@@ -114,6 +114,7 @@
                 <note type="updated" update="text-version" value="1.3.23" date-time="2022-01-04T21:49:37.377Z" user="celso">karma to karman in Skt. field glossary</note>
                 <note type="updated" update="text-version" value="1.3.24" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.3.25" date-time="2022-06-29T16:03:03.508Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.3.26" date-time="2022-12-08T00:26:44.696Z" user="konchog">Couple small fixes.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -22276,7 +22277,7 @@
                             a rain of nectar to satisfy living beings, he immediately told his
                             parents, “Mother, Father, I am going to practice the holy life in the
                             presence of the ascetic Gautama,” and departed. He went to Rājagṛha as
-                            he had said, and there saw the naked saint Nirgrantha Jñātiputra. </p>
+                            he had said, and there saw the naked ascetic Nirgrantha Jñātiputra. </p>
                         <milestone unit="chunk" xml:id="UT22084-073-001-3612"/>
                         <p tid="3530">He thought, “There he is—the ascetic Gautama!” and went forth
                             in his presence. After he went forth and studied their system of telling
@@ -32219,11 +32220,11 @@
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-073-001-5162">
-                            <term>naked saint</term>
+                            <term>naked ascetic</term>
                             <term xml:lang="Bo-Ltn">gcer bu pa </term>
                             <term xml:lang="bo">གཅེར་བུ་པ།</term>
                             <term xml:lang="Sa-Ltn">nirgrantha</term>
-                            <term xml:lang="Sa-Ltn">nigrantha</term>
+                            
                             <term type="definition">A certain class of Indian renunciants whose
                                 ascetic practice involves the eschewal of clothing.</term>
                         </gloss>
