--- a/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -9,7 +9,7 @@
             <title type="mainTitle" xml:lang="Bo-Ltn">dpung bzang gis zhus pa</title>
             <title type="mainTitle" xml:lang="bo">དཔུང་བཟང་གིས་ཞུས་པ།</title>
             <title type="longTitle" xml:lang="bo">འཕགས་པ་དཔུང་བཟང་གིས་ཞུས་པ་ཞེས་བྱ་བའི་རྒྱུད།</title>
-            <title type="longTitle" xml:lang="en">The Noble Tantra "The Questions of Subāhu"</title>
+            <title type="longTitle" xml:lang="en">The Noble Tantra “The Questions of Subāhu”</title>
             <title type="longTitle" xml:lang="Sa-Ltn">Ārya­subāhu­pari­pṛcchānāma­tantra</title>
             <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dpung bzang gis zhus pa zhes bya
                ba’i rgyud</title>
@@ -28,7 +28,7 @@
             <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
          </titleStmt>
          <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
          <publicationStmt status="1.a">
@@ -63,7 +63,7 @@
             </bibl>
          </sourceDesc>
          <notesStmt>
-            <note type="lastUpdated" date-time="2022-12-09T23:00:02.756Z" user="admin">09/12/2022 23:00:02</note>
+            <note type="lastUpdated" date-time="2022-12-09T23:07:34.461Z" user="admin">09/12/2022 23:07:34</note>
             <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T08:42:54.93Z" user="line-tofte">0.0.1</note>
             <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">2.h</note>
             <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">Auto
@@ -108,6 +108,7 @@
              <note type="updated" update="text-version" value="0.0.7" date-time="2022-12-01T11:04:36.278Z" user="line-tofte">Auto (update-contributors)</note>
              <note type="updated" update="translation-status" value="1.a" date-time="2022-12-09T22:59:56.854Z" user="martina-cotter">1.a</note>
              <note type="updated" update="text-version" value="1.0.0" date-time="2022-12-09T22:59:56.854Z" user="martina-cotter">First published version</note>
+             <note type="updated" update="text-version" value="1.0.1" date-time="2022-12-09T23:07:31.478Z" user="martina-cotter">Updated typo.</note>
          </notesStmt>
       </fileDesc>
    </teiHeader>
