--- a/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -28,7 +28,7 @@
             <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
          </titleStmt>
          <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
          <publicationStmt status="1.a">
@@ -37,6 +37,11 @@
                initiative to translate all the Buddha’s words into modern languages, and to make
                them available to everyone. </publisher>
                 <availability>
+                  <p type="tantricRestriction">
+                     <emph rend="bold">Warning:</emph> Readers are reminded that according to Vajrayāna Buddhist tradition there are
+                     restrictions and commitments concerning tantra. Practitioners who are not sure if they should read this
+                     translation are advised to consult the authorities of their lineage. The responsibility for reading this text
+                     or sharing it with others who may or may not fulfill the requirements lies in the hands of readers.</p>
                <licence>
                   <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                   <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -63,7 +68,7 @@
             </bibl>
          </sourceDesc>
          <notesStmt>
-            <note type="lastUpdated" date-time="2022-12-09T23:08:38.095Z" user="admin">09/12/2022 23:08:38</note>
+            <note type="lastUpdated" date-time="2022-12-12T18:00:25.893Z" user="admin">12/12/2022 18:00:25</note>
             <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T08:42:54.93Z" user="line-tofte">0.0.1</note>
             <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">2.h</note>
             <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">Auto
@@ -110,6 +115,7 @@
              <note type="updated" update="text-version" value="1.0.0" date-time="2022-12-09T22:59:56.854Z" user="martina-cotter">First published version</note>
              <note type="updated" update="text-version" value="1.0.1" date-time="2022-12-09T23:07:31.478Z" user="martina-cotter">Updated typo.</note>
              <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-09T23:08:35.133Z" user="martina-cotter">Updated typo.</note>
+             <note type="updated" update="text-version" value="1.0.3" date-time="2022-12-12T18:00:22.948Z" user="martina-cotter">Added tantra warning.</note>
          </notesStmt>
       </fileDesc>
    </teiHeader>
