--- a/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -4,15 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">rājādeśasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on Advice for the King [2]</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">rājādeśasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">rājādeśanāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-27"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-27"/>
+                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
+                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
+                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -32,9 +37,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-13T13:39:35.293Z" user="admin">13/12/2022 13:39:35</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-14T15:10:19.347Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-14T15:10:19.347Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-12-13T13:39:29.665Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-13T13:39:29.665Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:04:45.397Z" user="admin">13/12/2022 14:04:45</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-14T15:10:19.347Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-14T15:10:19.347Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-12-13T13:39:29.665Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-13T13:39:29.665Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-13T14:04:39.739Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
