--- a/translations/kangyur/placeholders/068-013_toh279-being_mindful_of_the_buddha.xml
+++ b/translations/kangyur/placeholders/068-013_toh279-being_mindful_of_the_buddha.xml
@@ -10,34 +10,40 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas rjes su dran pa</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabuddhānusmṛti</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-068-013"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh279" type="text">
                     <ref>Toh 279</ref>
                     <biblScope>vol.68, ff.54v-55r(108-109)</biblScope>
-                    <location count-pages="2">
-                        <start volume="68" page="110"/>
-                        <end volume="68" page="111"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="68" start-page="108" end-page="109"/>
                     </location>
                     <idno parent-id="O1JC114941JC14668" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11940" work="W22084"/>
                 </bibl>
+                <!-- Atisa section removed
                 <bibl key="toh4520" type="text">
                     <ref>Toh 4520</ref>
                     <biblScope/>
                     <author role="translatorTib">Atisa</author>
-                    <location count-pages="1">
-                        <start volume="213" page="56"/>
-                        <end volume="213" page="56"/>
+                    <location work="UT23703" count-pages="1">
+                        <volume number="213" start-page="54" end-page="54"/>
                     </location>
                     <idno parent-id="O1JC76301JC11278" work="http://read.84000.co/sections"/>
-                <idno source-id="O1JC76301JC112784520" work="http://read.84000.co/sections"/>
-                </bibl>
+                    <idno source-id="O1JC76301JC112784520" work="http://read.84000.co/sections"/>
+                </bibl>-->
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 16/01/2019 at 10:21:14 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:11:01.332Z" user="admin">13/12/2022 14:11:01</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:10:57.049Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:10:57.049Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
